--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css?family=Roboto:700");
-@import url(//fonts.googleapis.com/earlyaccess/notosansyi.css);
+@import url("https://fonts.googleapis.com/earlyaccess/notosansyi.css");
 * {
   margin: 0;
   padding: 0;
