--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,158 @@
   color: #ffc235;
 }
 
+body {
+  /* overflow: hidden; */
+}
+
+/* .bubblingG {
+  text-align: center;
+  position: absolute;  
+  top: 0%;
+  left: 0%;  
+	width:100%;
+	height:100%;
+  margin: auto;
+  background: rgba(49, 58, 110, 0.7);
+  background-size: cover;
+} */
+
+#autocomplete {
+  position: absolute;
+  top: 10px;
+  left: 45vh;
+  width: 200px;
+  height: 30px;
+  color: #777;
+}
+#autocomplete span {
+  color: #ffc235;
+}
+.bubblingG span {
+	display: inline-block;
+	vertical-align: middle;
+	width: 9px;
+	height: 9px;
+	margin: 23px auto;
+	background: rgba(29, 16, 102, 0.91);
+	border-radius: 46px;
+		-o-border-radius: 46px;
+		-ms-border-radius: 46px;
+		-webkit-border-radius: 46px;
+		-moz-border-radius: 46px;
+	animation: bubblingG 0.775s infinite alternate;
+		-o-animation: bubblingG 0.775s infinite alternate;
+		-ms-animation: bubblingG 0.775s infinite alternate;
+		-webkit-animation: bubblingG 0.775s infinite alternate;
+		-moz-animation: bubblingG 0.775s infinite alternate;
+}
+
+#bubblingG_1 {
+	animation-delay: 0s;
+		-o-animation-delay: 0s;
+		-ms-animation-delay: 0s;
+		-webkit-animation-delay: 0s;
+		-moz-animation-delay: 0s;
+}
+
+#bubblingG_2 {
+	animation-delay: 0.2295s;
+		-o-animation-delay: 0.2295s;
+		-ms-animation-delay: 0.2295s;
+		-webkit-animation-delay: 0.2295s;
+		-moz-animation-delay: 0.2295s;
+}
+
+#bubblingG_3 {
+	animation-delay: 0.469s;
+		-o-animation-delay: 0.469s;
+		-ms-animation-delay: 0.469s;
+		-webkit-animation-delay: 0.469s;
+		-moz-animation-delay: 0.469s;
+}
+
+
+
+@keyframes bubblingG {
+	0% {
+		width: 9px;
+		height: 9px;
+		background-color:rgba(248,255,194,0.97);
+		transform: translateY(0);
+	}
+
+	100% {
+		width: 22px;
+		height: 22px;
+		background-color:rgb(255,232,173);
+		transform: translateY(-19px);
+	}
+}
+
+@-o-keyframes bubblingG {
+	0% {
+		width: 9px;
+		height: 9px;
+		background-color:rgba(248,255,194,0.97);
+		-o-transform: translateY(0);
+	}
+
+	100% {
+		width: 22px;
+		height: 22px;
+		background-color:rgb(255,232,173);
+		-o-transform: translateY(-19px);
+	}
+}
+
+@-ms-keyframes bubblingG {
+	0% {
+		width: 9px;
+		height: 9px;
+		background-color:rgba(248,255,194,0.97);
+		-ms-transform: translateY(0);
+	}
+
+	100% {
+		width: 22px;
+		height: 22px;
+		background-color:rgb(255,232,173);
+		-ms-transform: translateY(-19px);
+	}
+}
+
+@-webkit-keyframes bubblingG {
+	0% {
+		width: 9px;
+		height: 9px;
+		background-color:rgba(248,255,194,0.97);
+		-webkit-transform: translateY(0);
+	}
+
+	100% {
+		width: 22px;
+		height: 22px;
+		background-color:rgb(255,232,173);
+		-webkit-transform: translateY(-19px);
+	}
+}
+
+@-moz-keyframes bubblingG {
+	0% {
+		width: 9px;
+		height: 9px;
+		background-color:rgba(248,255,194,0.97);
+		-moz-transform: translateY(0);
+	}
+
+	100% {
+		width: 22px;
+		height: 22px;
+		background-color:rgb(255,232,173);
+		-moz-transform: translateY(-19px);
+	}
+}
+
 #date, .day.date h3 {
   font-family: "Roboto", serif;
 }
@@ -431,3 +583,4 @@ svg .cloud {
     display: none;
   }
 }
+
